Cache-bust base CSS files.

--- a/notifico/templates/body.html
+++ b/notifico/templates/body.html
@@ -15,11 +15,11 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page_title|default('Notifico!') }}</title>
-    <link href="/css/bootstrap.min.css?v=3" rel="stylesheet">
+    <link href="/css/bootstrap.min.css?v=4" rel="stylesheet">
     <link href='//fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     {% block style %}
     {% endblock style %}
-    <link href="/css/custom.css" rel="stylesheet">
+    <link href="/css/custom.css?v=4" rel="stylesheet">
   </head>
 
   <body class="d-flex flex-column min-vh-100 bg-light text-dark">
