Consistent header color.

--- a/notifico/templates/admin/irc_networks.html
+++ b/notifico/templates/admin/irc_networks.html
@@ -13,7 +13,7 @@
     </div>
     <table class="table table-table-hover table-light table-borderless table-striped">
       <thead>
-        <tr>
+        <tr class="table-dark text-dark">
           <th scope="col" class="text-center">{{ _('Channels') }}</th>
           <th scope="col" class="text-center">{{ _('ID') }}</th>
           <th scope="col">{{ _('Host') }}</th>
