Start splitting hooks into incoming and outgoing hooks (to support discord, slack, zulip, etc)

--- a/notifico/templates/projects/project_details.html
+++ b/notifico/templates/projects/project_details.html
@@ -4,7 +4,7 @@
 {% block main_content %}
   <div class="card mt-4">
     <div class="card-header">
-      {{ _('Webhooks') }}
+      {{ _('Incoming Webhooks') }}
     </div>
     <div class="card-body">
       <div class="card-text">
