--- a/notifico/templates/body.html
+++ b/notifico/templates/body.html
@@ -14,6 +14,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ page_title|default('Notifico!') }}</title>
     <link href="/css/bootstrap.min.css?v=4" rel="stylesheet">
     <link href='//fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
