Support for password-protected channels (closes #3)

--- a/notifico/templates/projects/new_channel.html
+++ b/notifico/templates/projects/new_channel.html
@@ -33,6 +33,7 @@
         <div class="card-text">
           {{ form.hidden_tag() }}
           {{ forms.render_field(form.channel) }}
+          {{ forms.render_field(form.password) }}
           {{ forms.render_field(form.public) }}
           {{ forms.render_field(form.network) }}
           {% trans new_network=url_for('settings.irc') %}
