Add a quick and dirty admin view to see all enabled ChatLogs.

--- a/notifico/templates/admin/base.html
+++ b/notifico/templates/admin/base.html
@@ -13,5 +13,8 @@
     <a class="list-group-item list-group-item-action"
        href="{{ url_for('.irc_networks') }}">
       {{ _('IRC Networks') }}</a>
+    <a class="list-group-item list-group-item-action"
+       href="{{ url_for('.irc_chat') }}">
+      {{ _('Chat Logs') }}</a>
   </div>
 {% endblock %}
